--- a/Frontend/ngolist_restaurant.html
+++ b/Frontend/ngolist_restaurant.html
@@ -32,6 +32,17 @@
             background: #343a40 !important;
             top: 0;
         }
+        .message-card {
+            text-align: center;
+            font-size: 2rem;
+            padding: 3rem;
+            margin: 0 auto;
+            min-height: 60vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
     </style>
 </head>
 
