--- a/Frontend/donations_history_restaurant.html
+++ b/Frontend/donations_history_restaurant.html
@@ -77,6 +77,18 @@
             font-weight: 700;
             /* Bolder than normal bold */
         }
+        
+        .message-card {
+            text-align: center;
+            font-size: 2rem;
+            padding: 3rem;
+            margin: 0 auto;
+            min-height: 60vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
     </style>
 </head>
 
@@ -187,7 +199,18 @@
         let foodTransactions = []; // Global variable to store food transactions
 
         async function fetchFoodTransactions() {
+
+            const existingMessage = document.getElementById('empty-message');
+            if (existingMessage) {
+                ngoContainer.removeChild(existingMessage);
+            }
+
             const token = localStorage.getItem('authToken');
+            if (!token) {
+                alert('Authorization token is missing. Please login');
+                window.location.href = 'Login.html';
+                return;
+            }
             try {
                 const response = await fetch(`${BACKEND_URL}/foodtransaction/foodlogs/restaurant`, {
                     method: "GET",
@@ -195,6 +218,12 @@
                         'Authorization': token
                     }
                 });
+                if (response.status === 401) {
+                    alert('Not authorised to access this route');
+                    localStorage.clear();
+                    window.location.assign('index.html');
+                    return;
+                }
                 if (response.status !== 200) {
                     const data = await response.json();
                     alert(`Error: ${data.message}`);
@@ -212,6 +241,15 @@
             const container = document.getElementById('foodTransactionsContainer');
             container.innerHTML = ''; // Clear previous content
 
+            if (foodTransactions.length === 0) {
+                const message = document.createElement('div');
+                message.className = 'message-card'; // Apply custom message-card class
+                message.textContent = 'No NGO found';
+                message.id = 'empty-message';
+
+                ngoContainer.appendChild(message);
+                return;
+            }
             foodTransactions.forEach(transaction => {
                 const card = document.createElement('div');
                 card.classList.add('card', 'mb-4');
@@ -256,7 +294,7 @@
             document.getElementById('modalDescription').textContent = transaction.description;
             document.getElementById('modalPeopleServed').textContent = transaction.peopleServed;
             const volunteerPhonesElement = document.getElementById('modalVolunteerPhones');
-            if (transaction.volunteer.length > 0) {
+            if (transaction.contactPerson.phone.length > 0) {
                 volunteerPhonesElement.textContent = transaction.volunteer.join(', ');
             } else {
                 // volunteerPhonesElement.textContent = 'No volunteers participated';
