--- a/Frontend/food_transations_ngo.html
+++ b/Frontend/food_transations_ngo.html
@@ -180,6 +180,10 @@
 
         async function fetchFoodTransactions() {
             try {
+                const existingMessage = document.getElementById('empty-message');
+                if (existingMessage) {
+                    ngoContainer.removeChild(existingMessage);
+                }
                 const token = localStorage.getItem('authToken');
                 if (!token) {
                     alert('Authorization token is missing. Please login');
@@ -224,6 +228,8 @@
                 const message = document.createElement('div');
                 message.className = 'message-card';
                 message.textContent = 'No Pending Requests';
+                message.id = 'empty-message';
+
                 container.appendChild(message);
                 return;
             }
