--- a/Frontend/donation_histroy_individual.html
+++ b/Frontend/donation_histroy_individual.html
@@ -103,7 +103,7 @@
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="index_Ind.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="index_Ind.html" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="about_Ind.html" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="gallery_Ind.html" class="nav-link">Gallery</a></li>
                     <li class="nav-item"><a href="contact_Ind.html" class="nav-link">Contact</a></li>
